更新注册页（世林答应给我买柯基了）

--- a/Web.config
+++ b/Web.config
@@ -1,12 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+﻿<?xml version="1.0"?>
 <configuration>
-
   <connectionStrings>
-    <add name="Connection" connectionString="Data Source=.;Initial Catalog=AIFORUM;Integrated Security=True" />
+    <add name="Connection" connectionString="Data Source=.;Initial Catalog=AIFORUM;Integrated Security=True"/>
   </connectionStrings>
-    <system.web>
-      <compilation debug="false" targetFramework="4.0" />
-    </system.web>
-
+  <system.web>
+    <compilation debug="true" targetFramework="4.0"/>
+  </system.web>
 </configuration>
