更新首页、产品页、新闻页、问答仅仅实现展示功能，待完善！

--- a/Web.config
+++ b/Web.config
@@ -1,7 +1,9 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="Connection" connectionString="Data Source=.;Initial Catalog=AIFORUM;Integrated Security=True"/>
+    <add name="Connection" connectionString="Data Source=.;Initial Catalog=AIFORUM;Integrated Security=True" />
+    <add name="AIFORUMConnectionString" connectionString="Data Source=.;Initial Catalog=AIFORUM;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
